Resolves #25 Description of Rule overlaps with type and other fields on list page

--- a/src/pages/css/index.css
+++ b/src/pages/css/index.css
@@ -35,6 +35,7 @@
   font-style: italic;
   width: 350px;
   max-width: 350px;
+  word-wrap: break-word;
 }
 
 .status-cell {
